# maccleanup-rust

./: CLAUDE.md  Cargo.toml  HOMEBREW_SUBMISSION.md  LICENSE  README.md  build-universal.sh  mac-cleanup.rb  maccleanup-rust.rb
src/: main.rs
