[package]
name = "maccleanup-rust"
version = "1.3.0"
edition = "2021"
authors = ["Gappa"]
description = "🧹 Mac Cleanup Tool (Rust Edition) - Clean your Mac system efficiently"
homepage = "https://github.com/gappa55/maccleanup-rust"
repository = "https://github.com/gappa55/maccleanup-rust"
license = "MIT"
keywords = ["macos", "cleanup", "cache", "system", "utility"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "3.0.0"
indicatif = "0.18.0"
walkdir = "2.4"
chrono = "0.4"
humansize = "2.1"

[[bin]]
name = "maccleanup-rust"
path = "src/main.rs"

[package.metadata.cargo-universal]
output = "target/universal/maccleanup-rust"